# ChangeLog for net-print/hplip
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.104 2008/08/07 08:56:13 calchan Exp $

  07 Aug 2008; Denis Dupeyron <calchan@gentoo.org> hplip-2.8.6b.ebuild:
  Fixed hp-systray not starting up automatically with hp-toolbox, thanks to
  Gordon Malm (see bug #233968).

  06 Aug 2008; Markus Meier <maekke@gentoo.org> hplip-2.8.6b.ebuild:
  amd64/x86 stable, bug #233968

  05 Aug 2008; Markus Rothe <corsair@gentoo.org> hplip-2.8.6b.ebuild:
  Stable on ppc64; bug #233968

*hplip-2.8.6b (30 Jul 2008)

  30 Jul 2008; Denis Dupeyron <calchan@gentoo.org> +hplip-2.8.6b.ebuild:
  Version bump. Fixed bugs #223121, #223715 and #230913.

  29 May 2008; Ali Polatel <hawking@gentoo.org> hplip-2.7.12-r1.ebuild:
  python_mod_optimize is ROOT aware.

  22 May 2008; Markus Rothe <corsair@gentoo.org> hplip-2.8.5.ebuild:
  Added ~ppc64; bug #223043

*hplip-2.8.5 (21 May 2008)

  21 May 2008; Denis Dupeyron <calchan@gentoo.org> +hplip-2.8.5.ebuild:
  Version bump, see bug #222329.

*hplip-2.8.2 (04 Apr 2008)

  04 Apr 2008; Denis Dupeyron <calchan@gentoo.org> +hplip-2.8.2.ebuild:
  Version bump, bug #209641.

  24 Mar 2008; Denis Dupeyron <calchan@gentoo.org> hplip-2.7.10.ebuild,
  hplip-2.7.12.ebuild, hplip-2.7.12-r1.ebuild:
  Fixed kernel checks, thanks to Petteri Räty (bug #210890).

  14 Jan 2008; Denis Dupeyron <calchan@gentoo.org> hplip-2.7.10.ebuild,
  hplip-2.7.12.ebuild, hplip-2.7.12-r1.ebuild:
  Moved the part about avoiding collisions with cups-1.2 symlinks from
  pkg_setup() to pkg_preinst() so that a compilation failure doesn't result in
  changes to the filesystem. Thanks to Donnie Berkholz.

*hplip-2.7.12-r1 (13 Jan 2008)

  13 Jan 2008; Denis Dupeyron <calchan@gentoo.org> +hplip-2.7.12-r1.ebuild:
  Use python.eclass, thanks to Mart Raudsepp (bug #203669).

  27 Dec 2007; Denis Dupeyron <calchan@gentoo.org>