@@ -10,5 +10,5 @@ EBUILD hplip-2.7.12.ebuild 4053 RMD160 d611810ff118f923e20163187d203b454f3b08b9 
 EBUILD hplip-2.8.2.ebuild 4592 RMD160 aab228762a8719450b504794ac3d65a871738e3b SHA1 a1eeaecd17bf86dd83c842b38567feb6f06357a3 SHA256 90af3dc5697f02df7be2e24eea0cf3a2743960410c6267285561f2cf5bd83382
 EBUILD hplip-2.8.5.ebuild 4286 RMD160 0709b4781da6bcb9e32f81092b28cfba910e5ca7 SHA1 4fe6b04bfbc958f0b55c3bbf577881e316175c74 SHA256 b3420b603ee93146ca9116bec1d3cdf210c1a9dcf962020dbde3ec1699150441
 EBUILD hplip-2.8.6b.ebuild 5041 RMD160 7de668fdce3319639e7ee61b714684acdc58ef62 SHA1 7476ded8eafce9a6d19f5a82b54b1d04f9282954 SHA256 8ccbd45cd73f683033922ef327531855ac96fe31e3c69ff5d85288ce9785377f
-MISC ChangeLog 17418 RMD160 2e7b431403a841c15cde5e17d8c44fac9b87371b SHA1 f86cc9b0862147475894644ce82158c1b9ea9c5c SHA256 10c26a9a7d0ff69260ca8ee58cc8ce000dfbe1d93443b755dc40c33eb3fd1916
-MISC metadata.xml 250 RMD160 00f8254bd6b52bc050cdc822b7370b3e2d2f4970 SHA1 f91d1e6c01026cba252d042ba254f4a4bc61194a SHA256 ab106df12671f3f541e0416f8c0d5a96b6e725ed7b3b111d27af7a584c4bf164
+MISC ChangeLog 17507 RMD160 7720010f062aff55649273153c17b0b0443dc097 SHA1 acf8bfb8628fbc06dbe8978008e51e2134d27b6a SHA256 c5719c677b05a73de9f8c6c0980613532da15766ddf4e629ce5357824f494799
+MISC metadata.xml 1592 RMD160 caf7fbb9f3e8f1fecfbe22963bcd0d29d5adb1c4 SHA1 c325171f26bb06a71a0d21e56faf4558359fe1e0 SHA256 27bc66ec46984e674466082e820d3d6065f3b83b4563d1e3d5e2f0243a55137c
