@@ -1,6 +1,9 @@
 # ChangeLog for net-print/hplip
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.104 2008/08/07 08:56:13 calchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.105 2008/08/07 12:57:47 calchan Exp $
+
+  07 Aug 2008; Denis Dupeyron <calchan@gentoo.org> metadata.xml:
+  Implemented GLEP 56.
 
   07 Aug 2008; Denis Dupeyron <calchan@gentoo.org> hplip-2.8.6b.ebuild:
   Fixed hp-systray not starting up automatically with hp-toolbox, thanks to
